
[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_file = "src/dynamo_debugger/_version.py"
fallback_version = "0.1.0"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = false

[project]
name = "dynamo-debugger"
dynamic = ["version"]
authors = [{ name = "Grzegorz Świtek", email = "grzegorz.switek@fort.pl" }]
requires-python = ">=3.12.0,<3.13.0"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "build"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
files = ["src/dynamo_debugger"]
disable_error_code = ["import-untyped"]
